force-app/main/default/objects/ActionPlanTask__c/ActionPlanTask__c.object-meta.xml
<CustomObject>
    <label>Action Plan Task</label>
    <nameField>
        <label>Action Plan Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>