force-app/main/default/objects/ActionPlanTask__c/fields/ActionPlan__c.field-meta.xml
<CustomField>
    <fullName>ActionPlan__c</fullName>
    <label>Action Plan</label>
    <referenceTo>ActionPlan__c</referenceTo>
    <relationshipLabel>Action Plan Tasks</relationshipLabel>
    <relationshipName>ActionPlanTasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>