force-app/main/default/objects/ActionPlanTask__c/fields/ActionPlanTask__c.field-meta.xml
<CustomField>
    <fullName>ActionPlanTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Dependency</label>
    <referenceTo>ActionPlanTask__c</referenceTo>
    <relationshipLabel>Action Plan Tasks</relationshipLabel>
    <relationshipName>Action_Plan_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>