force-app/main/default/objects/ActionPlanTask__c/fields/MinutesReminder__c.field-meta.xml
<CustomField>
    <fullName>MinutesReminder__c</fullName>
    <label>Minutes Reminder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>