force-app/main/default/objects/ActionPlanTask__c/fields/SendEmail__c.field-meta.xml
<CustomField>
    <fullName>SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send E-Mail</label>
    <type>Checkbox</type>
</CustomField>