force-app/main/default/objects/ActionPlanTask__c/fields/TimeReminder__c.field-meta.xml
<CustomField>
    <fullName>TimeReminder__c</fullName>
    <formula>IF(Reminder__c ,IF(MOD(FLOOR(VALUE(MinutesReminder__c) / 60),12) == 0,&apos;12&apos;,TEXT(MOD(FLOOR(VALUE(MinutesReminder__c) / 60),12))) &amp; &apos;:&apos; &amp; IF(MOD(VALUE(MinutesReminder__c) ,60)==0,&apos;00&apos;,TEXT(MOD(VALUE(MinutesReminder__c) ,60)))+&apos; &apos;+ IF( VALUE(MinutesReminder__c)&gt;=720, &apos;PM&apos;,&apos;AM&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Reminder</label>
    <type>Text</type>
</CustomField>