force-app/main/default/objects/ActionPlanTask__c/fields/UserFieldName__c.field-meta.xml
<CustomField>
    <fullName>UserFieldName__c</fullName>
    <label>Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>